Switch to using stream.tolist rather than collectors